syntax = "proto3";

option go_package = "github.com/c12s/kuiper/pkg/api";

package proto;

message Param {
  string key = 1;
  string value = 2;
}

message NamedParamSet {
  string name = 1;
  repeated Param paramSet = 2;
}

message NewStandaloneConfig {
  string organization = 1;
  string name = 2;
  string version = 3;
  repeated Param paramSet = 4;
}

message StandaloneConfig {
  string organization = 1;
  string name = 2;
  string version = 3;
  string createdAt = 4;
  repeated Param paramSet = 5;
}

message NewConfigGroup {
  string organization = 1;
  string name = 2;
  string version = 3;
  repeated NamedParamSet paramSets = 4;
}

message ConfigGroup {
  string organization = 1;
  string name = 2;
  string version = 3;
  string createdAt = 4;
  repeated NamedParamSet paramSets = 5;
}

message ConfigId {
  string organization = 1;
  string name = 2;
  string version = 3;
}

message PlacementTask {
  string id = 1;
  string node = 2;
  string namespace = 3;
  string status = 4;
  string acceptedAt = 5;
  string resolvedAt = 6;
}

message Diff {
  string type = 1;
  map<string, string> diff = 2;
}

message Diffs {
  repeated Diff diffs = 1;
}

message ApplyStandaloneConfigCommand {
  StandaloneConfig config = 1;
  string taskId = 2;
  string namespace = 3;
}

message ApplyConfigGroupCommand {
  ConfigGroup group = 1;
  string taskId = 2;
  string namespace = 3;
}